--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,9 +3,10 @@ name: Node CI
 on: push
 
 jobs:
-  run-linter:
-    name: Run linter
+  run-tests:
+    name: Run tests
     runs-on: ubuntu-latest
+    container: node:10.18-jessie
 
     services:
       redis:
@@ -26,8 +27,6 @@ jobs:
 
       - name: Install Node.js dependencies
         run: make install
-        env:
-          CI: true
       - name: Run editorconfig
         run: make editorconfig
       - name: Run linter
@@ -41,3 +40,9 @@ jobs:
           REDIS_HOST: redis
           REDIS_PORT: 6379
           CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
+          SALT_ROUNDS: 10
+          TOKEN_HASH_ALGORITHM: HS256
+          TOKEN_EXPIRES_IN_HOURS: 1
+          TOKEN_SECRET: secret
+          CI: true
+
