--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "pg": "8.5.1",
     "pg-hstore": "2.3.3",
     "redis": "3.0.2",
+    "redis-mock": "0.55.0",
     "sequelize": "6.3.5",
     "sqlite3": "5.0.0",
     "swagger-ui-express": "4.1.5",
